# max.dev

py_repo/: README.md  pyproject.toml
py_repo/py_max/finance_data/: __init__.py
py_repo/py_max/finance_data/config/: __init__.py  stocks.py
py_repo/py_max/finance_data/read_sql/: __init__.py  get_stock_data.py
py_repo/py_max/finance_data/static/: __init__.py
py_repo/py_max/finance_data/upload_to_sql/: data_capture.py  stock_stripper.py
py_repo/py_max/model_data/: algo_strat.py  apple_model.py  machine_model.py
py_repo/py_max/model_data/config/: __init__.py
py_repo/py_max/py_utils/: __init__.py  error_logging.py
py_repo/py_max/py_utils/sql/: __init__.py  database_connector.py  yahoo_fin_data.py
py_repo/py_max/stock_project/: data_capture.py  stock_stripper.py
py_repo/py_max/stock_project/config/: __init__.py
py_repo/py_max/stock_project/static/: __init__.py  web_page_statics.py
py_repo/py_max/yahoo_finance_reader/: data_capture.py  stock_stripper.py
py_repo/py_max/yahoo_finance_reader/static/: __init__.py
rust_repo/: Cargo.toml
rust_repo/src/: main.rs
rust_repo/src/data_structures/: data_structures.rs
rust_repo/src/read_database/: read_database.rs
rust_repo/src/statics/: statics.rs
